--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,56 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+
+	maven { url "https://jitpack.io"
+		metadataSources {
+			artifact() // Look directly for artifact
+		}
+	}
+// Scheduler, Queue, MultiDim, AutoJSON
+	maven { url "https://theo.is-a.dev/maven-repo/" }
+
+	maven { url "https://maven.shedaniel.me/" }
+	maven { url "https://maven.terraformersmc.com/releases/" }
+
+	exclusiveContent {
+		forRepository {
+			maven {
+				name = "Modrinth"
+				url = "https://api.modrinth.com/maven"
+			}
+		}
+		filter {
+			includeGroup "maven.modrinth"
+		}
+	}
+}
+
+loom {
+	splitEnvironmentSourceSets()
+}
+//accessWidenerPath = file("src/main/resources/ait-extras.accesswidener")
+
+//runs {
+// This adds a new gradle task that runs the datagen API
+//datagen {
+//inherit server
+//name "Data Generation"
+//vmArg "-Dfabric-api.datagen"
+//vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
+//vmArg "-Dfabric-api.datagen.modid=ait"
+
+//runDir "build/datagen"
+//}
+//}
+//}
+
+repositories {
+	// Add repositories to retrieve artifacts from in here.
+	// You should only use this when depending on other mods because
+	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
+	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
+	// for more information about repositories.
 }
 
 fabricApi {
@@ -30,8 +80,37 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
+	include (implementation "net.objecthunter:exp4j:0.4.8")
+
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	implementation 'com.google.code.gson:gson:2.8.9'
+
+	modCompileOnlyApi("com.github.qouteall:GravityChanger:${project.gravity_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+
+	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+
+	modApi("com.terraformersmc:modmenu:${project.modmenu_version}")
+
+	modCompileOnlyApi "maven.modrinth:k9-mod:${project.k9_version}"
+
+	include(modImplementation("dev.drtheo:multidim:${project.multidim_version}")) {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+	include(modImplementation("dev.drtheo:scheduler:${project.scheduler_version}")) {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+	include(modImplementation("dev.drtheo:queue:${project.queue_version}")) {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+	modImplementation("com.github.amblelabs:modkit:${project.amblekit_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+	modImplementation "maven.modrinth:ait:${project.ait_version}"
 	
 }
 
