--- a/gradle.properties
+++ b/gradle.properties
@@ -10,9 +10,20 @@ loader_version=0.16.14
 loom_version=1.10-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=0.1-1.20.1
 maven_group=net.awt
 archives_base_name=awt
 
 # Dependencies
 fabric_version=0.92.5+1.20.1
+
+ait_version= 1.2.4.2811-1.20.1-release
+
+k9_version = 1.0.2
+gravity_version = v1.1.2-mc1.20.1
+cloth_version = 11.0.99
+modmenu_version = 7.0.1
+multidim_version = 2.1.3
+scheduler_version = 1.0.2
+queue_version = 1.0.2-1.20
+amblekit_version = v1.1.8
