--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,9 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	include (implementation "net.objecthunter:exp4j:0.4.8")
+	// Cardinal Components API
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:<latest_version>"
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-player:<latest_version>"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
