--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,4 @@ multidim_version = 2.1.4
 scheduler_version = 1.1.0
 queue_version = 1.1.0-1.20
 amblekit_version = v1.1.8
+trinkets_version = 3.7.2
