--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ archives_base_name=awt
 # Dependencies
 fabric_version=0.92.5+1.20.1
 
-ait_version = 1.2.11.2825-1.20.1-release
+ait_version= 1.2.12-release+mc.1.20.1
 
 yacl_version = 3.6.6+1.20.1-fabric
 
@@ -27,5 +27,5 @@ modmenu_version = 7.0.1
 multidim_version = 2.1.4
 scheduler_version = 1.1.0
 queue_version = 1.1.0-1.20
-amblekit_version = v1.1.8
+amblekit_version= 1.1.14
 trinkets_version = 3.7.2
