--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,23 @@ dependencies {
 	
 }
 
+repositories {
+	maven {
+		name = "Ladysnake Mods"
+		url = 'https://maven.ladysnake.org/releases'
+	}
+}
+
+dependencies {
+	// Replace modImplementation with modApi if you expose components in your own API
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
+	// Copy the following only if you want to bundle Cardinal Components API as a Jar-in-Jar dependency
+	// (otherwise, you should configure the dependency on Modrinth/Curseforge)
+	include "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
+	include "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
+}
+
 processResources {
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE // Exclude duplicate files, I don"t why this even works
 	inputs.property "version", project.version
